# import-and-send-via-mqtt

./: Cargo.toml  move_files.sh
src/: main.rs  models.rs  mqtt_logic.rs  notify_logic.rs
watch-dir/: test-1.csv  test-2.csv
